fix(cors): update CorsConfig to use explicit Arrays.asList syntax with java.util.Arrays import